# watchflow-test-code

./: pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
.watchflow/: rules.yaml
app/: __init__.py
app/api/v1/: __init__.py  orders.py  products.py  subscriptions.py  users.py
app/api/v2/: __init__.py  subscriptions.py  users.py
app/auth/: utils.py  views.py
app/config/: secrets.py  settings.py
app/models/: __init__.py  audit_log.py  order.py  payment.py  product.py  subscription.py  user.py
app/payments/: processor.py  webhooks.py
app/utils/: cache.py  crypto.py  email.py  reports.py
infra/docker/: Dockerfile
infra/terraform/: main.tf  variables.tf
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_subscriptions_and_audit.py  003_add_team_seats.py
tests/: conftest.py  test_auth.py  test_products.py  test_users_api.py
