[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "watchflow-api"
version = "1.3.0"
description = "Watchflow subscription billing API"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S", "B"]
ignore = [
    "S101",   # assert in tests
    "S311",   # random — not used for crypto
    "B008",   # function calls in default args (Flask patterns)
]

[tool.ruff.lint.per-file-ignores]
"app/utils/reports.py" = ["S608"]  # intentional raw SQL risk signals

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[[tool.mypy.overrides]]
# Flask-SQLAlchemy's db.Model is dynamic; stubs not available
module = "app.models.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/config/*", "migrations/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = []
